@@ -242,13 +242,13 @@ public class JspCompilationContext {
     protected Compiler createCompiler(String className) {
         Compiler compiler = null;
         try {
-            compiler = (Compiler) Class.forName(className).newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
-            log.warn(Localizer.getMessage("jsp.error.compiler"), e);
+            compiler = (Compiler) Class.forName(className).getDeclaredConstructor().newInstance();
         } catch (NoClassDefFoundError | ClassNotFoundException e) {
             if (log.isDebugEnabled()) {
                 log.debug(Localizer.getMessage("jsp.error.compiler"), e);
             }
+        } catch (ReflectiveOperationException e) {
+            log.warn(Localizer.getMessage("jsp.error.compiler"), e);
         }
         return compiler;
     }
